--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -2,23 +2,33 @@ doctype html
 html
   head
     title LTS Help Desk Schedule
+    meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.css')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js")
   body
-    div.navbar
-      div.nav-title
-        h3 Help Desk
-      if user
-        div.log
-          a(href='/logout') Logout
-      else
-        div.log
-          a(href='/login') Login
-    block content
-    div.container.align-left
-      h4.small LTS Help Desk Schedule &copy; 2016
-      p.small Maintained by Ari Kalfus
-      a(href='mailto:akalfus@brandeis.edu') Contact
+    div.container-fluid
+      div.navbar
+        div.nav-title
+          h3 Help Desk Schedule
+          if user
+            div.log
+              a(href='/logout') Logout
+          else
+            div.log
+              a(href='/login') Login
+    div.container-fluid
+      block content
+    div.container-fluid
+      br
+      br
+      div
+        h4.small LTS Help Desk Schedule &copy; 2016
+        p.small Maintained by Ari Kalfus
+        a(href='mailto:akalfus@brandeis.edu') Contact
+    script(src="/javascripts/calendar.js")
     script(src='/javascripts/main.js' type='text/javascript')
