Adding calendar functionality

--- a/views/clock-in.jade
+++ b/views/clock-in.jade
@@ -1,6 +1,9 @@
 extends layouts/layout
 
 block content
-  div
+  div.contain-fluid
     div.well
-      p You've reached the clock-in page. We're working on it.
+      div
+        p You've reached the clock-in page. We're working on it.
+      div
+        a.btn.btn-info(role='button' href='/cal') Go Back to Calendar
