Login button and login redirect if not logged in

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #ffe9c3;
+  background-color: #ecf4ff;
 }
 
 a {
