--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -3,9 +3,9 @@ html
   head
     title LTS Help Desk Schedule
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.css')
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js')
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
@@ -14,13 +14,11 @@ html
     div.container-fluid
       div.navbar
         div.nav-title
-          h3 Help Desk Schedule
           if user
-            div.log
-              a.btn.btn-warning(role='button' href='/logout') Logout
+            h4 You are logged in as #{user}
           else
-            div.log
-              a.btn.btn-info(role='button' href='/login') Login
+            h3 Please log in.
+            a.btn.btn-primary(type='button' role='button' href='/login') Login
     div.container-fluid
       block content
     div.container-fluid
