--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,3 +7,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+th {
+  text-align: center;
+}
+
+.bootstrap-timepicker-widget.dropdown-menu {
+  background-color: #f9f4f1;
+}
