--- a/views/admin_home.jade
+++ b/views/admin_home.jade
@@ -49,29 +49,7 @@ block content
                 div.col-md-8
                   div.table-responsive
                     table.table.table-striped.table-bordered.table-hover.table-condensed#shift-override-results
-          h2.text-center Weekly Shifts Template
-          br
-          div.table-responsive
-            table.table.table-striped.table-bordered.table-hover.table-condensed
-              tr
-                th
-                th Monday
-                th Tuesday
-                th Wednesday
-                th Thursday
-                th Friday
-                th Saturday
-                th Sunday
-              tr
-                td
-
-                td
-                td
-                td
-                td
-                td
-                td
-                td
+          div#temp-cal
       div.tab-pane#settings(role='tabpanel')
         div.well
           p This is the settings well
