--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -9,7 +9,8 @@ block content
       div
         h4
           b Currently on shift:
-        //FIXME: Create this
+          div.curr-on-shift
+            //TODO: Create javascript to populate with database data
         p No one is on shift!
     div#sub-request-div(hidden='true')
       div#sub-request-form
