--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -25,7 +25,9 @@ html
       div
         h4.small LTS Help Desk Schedule &copy; 2016
         p.small Maintained by Ari Kalfus
-        a.btn.btn-default.btn-xs(role='button' href='mailto:akalfus@brandeis.edu') Contact
+        p.small Issue with the app? &#32;
+          a(href='https://github.com/arikalfus/Schedule/issues/new') Submit it here
+        a.btn.btn-default.btn-xs(role='button' href='mailto:akalfus@brandeis.edu') Send an email
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js')
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
