--- a/views/calendar.jade
+++ b/views/calendar.jade
@@ -28,12 +28,12 @@ block content
                 input.form-control#sub-request-shift(type='text' readonly)
             p From:
             div.input-group.bootstrap-timepicker.timepicker
-              span.input-group-addon.glyphicon.glyphicon-time#begin-time-glyph
+              span.input-group-addon.glyphicon.glyphicon-time
               input.form-control.input-small#sub-request-begin-time(type='text', aria-describedby='begin-time-glyph')
             br
             p To:
             div.input-group.bootstrap-timepicker.timepicker
-              span.input-group-addon.glyphicon.glyphicon-time#end-time-glyph
+              span.input-group-addon.glyphicon.glyphicon-time
               input.form-control.input-small#sub-request-end-time(type='text', aria-describedby='end-time-glyph')
             br
             button.btn.btn-default.center-block(type='submit', role='button') Submit
